// package push;

//通用正确和错误码
enum ResultCode
{
	RESULT_SUCCESS = 0; //成功
    RESULT_FORBIDDEN = 1; //没有权限
    RESULT_UNLOAD = 2;    //应用已卸载
	RESULT_FAIL = 10000; //其他错误
}

